# dream-cli

./: CHANGES.md  Makefile  README.md  dream-cli.opam  dune-project  index.html
.github/workflows/: ci.yml
dream-cli/: index.html
dream-cli/Dream_cli/: index.html
dream-cli/Dream_cli__/: index.html
dream-cli/Dream_cli__/Cmd_gen_key/: index.html
dream-cli/Dream_cli__/Cmd_run/: index.html
dream-cli/Dream_cli__/Common/: index.html
dream-cli/Dream_cli__/Common/Syntax/: index.html
dream-cli/Dream_cli__Cmd_gen_key/: index.html
dream-cli/Dream_cli__Cmd_run/: index.html
dream-cli/Dream_cli__Common/: index.html
dream-cli/Dream_cli__Common/Syntax/: index.html
example/: dune  server.ml
lib/: cmd_gen_key.ml  cmd_gen_secret.ml  cmd_gen_secret.mli  cmd_run.ml  cmd_run.mli  common.ml  common.mli  dream_cli.ml  dream_cli.mli  dune
